--- a/index.html.html
+++ b/index.html.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <!-- Это тестовый коммент для совместной работы и не стоит называть index.html => index.html.html -->
+    <!-- Это тестовый коммент для совместной работы. PS: не стоит называть index.html => index.html.html -->
     <header class="header">
       <button class="menu-button">
         <span class="menu-line"></span>
